--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,1 +1,57 @@
-<p>home works!</p>
+
+<div class="home-background">
+<nav class="navbar">
+  <ul>
+    <li><a routerLink="/"> الرئيسية</a></li>
+    <li><a routerLink="/about"> من نحن </a></li>
+    <li><a routerLink="/contact">اتصل بنا</a></li>
+  </ul>
+</nav>
+
+    <section class="welcome-section">
+      <img src="/assets/images/tunisia.png" alt="Tunisia Flag" class="flag-icon" />
+      <div class="welcome-text">
+        <h1>مرحبا بيك في منصتنا التعليمية التونسية!</h1>
+        <p class="special-font">
+          هنا نآمنو أنّ كل طفل عندو قدرة كبيرة على التعلم والنجاح.
+          نوفروا بيئة داعمة ومصممة باش تساعد طفلك يكتشف إمكانياتو ويتطوّر بثقة وفخر.
+        </p>
+        <p class="highlight">
+          انضم لينا، وخلّي رحلة التعلم متاع طفلك تكون مليانة أمل، تحدي، وإنجاز!
+        </p>
+      </div>
+    </section>
+   
+    <div class="button-group">
+      <div class="voltage-button">
+        <button (click)="goToSignIn()">تسجيل الدخول</button>  
+              <svg viewBox="0 0 100 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+          <path class="line-1" d="M0 20 L100 20" stroke-width="2" stroke-linecap="round"/>
+          <path class="line-2" d="M0 10 L100 10" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+        <div class="dots">
+          <div class="dot dot-1"></div>
+          <div class="dot dot-2"></div>
+          <div class="dot dot-3"></div>
+          <div class="dot dot-4"></div>
+          <div class="dot dot-5"></div>
+        </div>
+      </div>
+  
+      <div class="voltage-button">
+        <button (click)="goToSignUp()">إنشاء حساب</button> 
+                <svg viewBox="0 0 100 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+          <path class="line-1" d="M0 20 L100 20" stroke-width="2" stroke-linecap="round"/>
+          <path class="line-2" d="M0 10 L100 10" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+        <div class="dots">
+          <div class="dot dot-1"></div>
+          <div class="dot dot-2"></div>
+          <div class="dot dot-3"></div>
+          <div class="dot dot-4"></div>
+          <div class="dot dot-5"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
