--- a/src/app/component/contact-us/contact-us.component.css
+++ b/src/app/component/contact-us/contact-us.component.css
@@ -171,18 +171,19 @@
     width: 140px;
   }
 }
-
 .navbar {
   position: absolute;
-  top: 2rem; /* distance from top */
+  top: 2rem;
   left: 50%;
   transform: translateX(-50%);
   background: transparent;
   padding: 0;
-  z-index: 10; /* stay above background but not block other content */
+  z-index: 10;
   font-family: 'FredFredburgerARAHeadBlack', sans-serif;
   direction: rtl;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
 }
+
 .navbar ul {
   list-style: none;
   margin: 0;
