--- a/src/app/component/lesson-board/lesson-board.component.html
+++ b/src/app/component/lesson-board/lesson-board.component.html
@@ -10,7 +10,7 @@
   <div class="lesson-container">
     <h2 class="lesson-title">{{ title || 'درس' }}</h2>
 
-    <button class="exit-button" routerLink="/">
+    <button class="exit-button" routerLink="/finished">
       <span>خروج</span>
     </button>
 
@@ -30,13 +30,13 @@
       >
         العودة ←
       </button>
+<button
+  class="question-button"
+  (click)="onQuestion()"
+>
+  <img src="/assets/images/arrow.png" alt="سؤال" class="question-icon" />
+</button>
 
-      <button
-        class="question-button"
-        (click)="onQuestion()"
-      >
-        سؤال
-      </button>
 
       <button
         class="next-button"
