--- a/src/app/component/chatbot/chatbot.component.html
+++ b/src/app/component/chatbot/chatbot.component.html
@@ -22,7 +22,7 @@
         <span class="star">⭐</span>
         <span class="star">⭐</span>
       </div>
-      <button class="exit-button" routerLink="/finished">
+      <button class="exit-button" routerLink="/select-mode">
         <span>خروج</span>
       </button>
     </div>
