--- a/src/app/component/select-subject/select-subject.component.html
+++ b/src/app/component/select-subject/select-subject.component.html
@@ -11,7 +11,7 @@
         class="class-box"
         *ngFor="let subject of subjects; let i = index"
         [ngStyle]="{ 'background-color': colors[i % colors.length] }"
-        (click)="selectSubject(subject.name)"
+        (click)="selectSubject(subject.value)"
       >
         <img [src]="'assets/images/' + subject.image" alt="{{subject.name}}" />
         <p>{{ subject.name }}</p>
